# genai-llm-rag-app

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  Makefile  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: proposed_change.md
.github/PULL_REQUEST_TEMPLATE/: merge.md
.github/workflows/: conventional-pr.yml  python-test.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  observability.py  settings.py
backend/app/api/: __init__.py
backend/app/api/routers/: __init__.py  chat.py  chat.py.org  chat.py.org1  messaging.py  vercel_response.py
backend/app/engine/: __init__.py  generate.py  index.py
backend/app/engine/loaders/: __init__.py  db.py  file.py  web.py
backend/config/: loaders.yaml
backend/tests/: __init__.py
example/: main.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/components/: header.tsx
manifests/: backend-rt.yaml  backend-srv.yaml  backend.yaml  cronjob.yaml  frontend-rt.yaml  frontend-srv.yaml  frontend.yaml
