[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "abhishek vijra <avijra@redhat.com>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.109.1"

aiostream = "^0.5.2"
llama-index = "0.10.28"
llama-index-core = "0.10.28"
llama-index-llms-ollama = "^0.1.3"
llama_index-embeddings-ollama = "^0.1.2"
llama-index-readers-s3 = "^0.1.7"
llama-index-embeddings-huggingface = "^0.2.0"
vllm = "^0.4.2"
torch = "^2.3.0"
xformers = "^0.0.26.post1"

milvus = "2.2.15"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-milvus]
version = "^0.1.6"

[tool.poetry.dependencies.pymilvus]
version = "2.4.0"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.2"

[tool.poetry.dependencies.llama-index-readers-web]
version = "^0.1.6"

[tool.poetry.dependencies.traceloop-sdk]
version = "^0.15.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"